--- a/Tech/Shopper/app/src/main/res/layout/activity_login.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_login.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:padding="20dp"
     tools:context=".LoginActivity"
+    android:layout_marginTop="20dp"
     android:background="@color/colorBackgroundColour">
 
     <LinearLayout
@@ -21,25 +22,30 @@
             android:id="@+id/ss_name_TV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
             android:fontFamily="@font/lemonada_bold"
             android:text="Let's Collab"
             android:textColor="@color/colorMainColour"
             android:textSize="35sp"
             android:textStyle="bold" />
 
-        <!-- Text: Login
+        Text: Login
+
+        <!-- Google Sign In Btn -->
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"
             android:fontFamily="@font/montserrat_bold"
             android:text="Login"
             android:textAlignment="center"
             android:textColor="@color/colorMainColour"
             android:textSize="32sp"
             android:textStyle="bold" />
--->
-        <!-- Google Sign In Btn -->
+
         <com.google.android.gms.common.SignInButton
             android:id="@+id/googleLoginBtn"
             android:layout_width="match_parent"
