--- a/Tech/Shopper/app/src/main/res/layout/activity_login.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:gravity="center">
+        android:gravity="center"
+        android:layout_marginBottom="30dp">
 
         <!-- Text: Let's Collab-->
         <TextView
@@ -43,13 +44,6 @@
             android:textColor="@color/colorMainColour"
             android:textSize="32sp"
             android:textStyle="bold" />
-
-        <com.google.android.gms.common.SignInButton
-            android:id="@+id/googleLoginBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="40dp"
-            />
     </LinearLayout>
 
 
@@ -58,7 +52,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_below="@+id/Login_details">
+        android:layout_below="@+id/Login_details"
+        android:layout_marginBottom="20dp">
+
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/googleLoginBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            />
 
         <!-- TextView: Mall -->
         <TextView
@@ -210,7 +212,6 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="bottom"
-        android:layout_marginTop="40dp"
         android:layout_below="@+id/login_details">
 
         <!-- Text: Recover password -->
